--- a/app/globals.css
+++ b/app/globals.css
@@ -64,3 +64,7 @@
     @apply bg-background text-foreground;
   }
 }
+.gradient-small-radius {
+  background: radial-gradient(circle at left,  #FF5FD2 2%, black 12%);
+    
+}
