--- a/app/globals.css
+++ b/app/globals.css
@@ -68,3 +68,12 @@
   background: radial-gradient(circle at left,  #FF5FD2 2%, black 12%);
     
 }
+
+/* Hide scrollbar for all browsers */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
